samples/_failures_safe/1761441077_1a4bf0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a60f90f7.c: In function ‘main’:
./samples/SAFE/__tmp_a60f90f7.c:160:5: error: expected expression at end of input
  160 |     sm.buffer_pos =
      |     ^~
./samples/SAFE/__tmp_a60f90f7.c:160:5: error: expected declaration or statement at end of input
